--- a/style/responsive.css
+++ b/style/responsive.css
@@ -45,4 +45,29 @@
   .plant-section {
     padding: 10px;
   }
+  /* plantLover section style */
+  .plantLover-container {
+    flex-direction: column;
+  }
+  .plantLover-image .badge {
+    display: none;
+  }
+  .plantLover-image {
+    max-width: 100%;
+  }
+  .plantLover-content {
+    max-width: 100%;
+  }
+  .plantLover-content h2 {
+    font-size: 24px;
+    margin-bottom: 16px;
+  }
+  .plantLover-content ul li {
+    margin-bottom: 16px;
+    font-size: 14px;
+    padding: 0px 10px 0px 10px;
+    margin: 0px 0px 16px 30px;
+  }
+  .plantLover-content ul {
+  }
 }
