--- a/style/style.css
+++ b/style/style.css
@@ -23,6 +23,9 @@ img {
 .section-title span {
   color: var(--primaryColor);
 }
+.text-white {
+  color: #ffffff;
+}
 
 /* .description-color {
   color: rgba(0, 0, 0, 0.5);
@@ -164,6 +167,17 @@ h1.banner-title {
   top: -50px;
   right: -50px;
 }
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.badgeRotate {
+  animation: spin 2s linear infinite;
+}
 .plantLover-content h2 {
   font-weight: 600;
   font-size: 50px;
@@ -197,7 +211,7 @@ h1.banner-title {
 }
 
 .latest-deals-container {
-  margin: 100px auto;
+  margin: 100px auto 0px auto;
 }
 .deal-content {
   width: 710px;
@@ -236,7 +250,6 @@ h1.banner-title {
   grid-row: span 2;
 }
 .zabo-plant {
-  max-width: 753px;
   max-height: 423px;
   background-image: url("../assets/deal-zabo.png");
   background-size: cover;
@@ -247,15 +260,14 @@ h1.banner-title {
 }
 .sixtyParsent h3,
 .thirtyParsent h3 {
-  color: #ffffff;
   font-size: 20px;
   font-weight: 600;
 }
 .sixtyParsent a,
 .thirtyParsent a,
 .zabo-plant a {
-  color: #ffffff;
   font-weight: 600;
+  color: #ffffff;
 }
 .sixtyParsent a,
 .thirtyParsent a {
@@ -264,14 +276,13 @@ h1.banner-title {
 .zabo-plant h3 {
   font-size: 40px;
   font-weight: 600;
-  color: #ffffff;
 }
 .thirtyParsent {
   max-width: 100%;
   height: 201px;
   display: flex;
   flex-direction: column;
-  align-items: irec center;
+  align-items: center;
   justify-content: center;
 }
 .sixtyParsent {
@@ -290,4 +301,89 @@ h1.banner-title {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+/* join section style */
+.join-section {
+  background-image: url("../assets/news-letter-bg.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.join-section-container {
+  max-width: 1140px;
+  margin: 0 auto;
+  height: 533px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.join-section-container .section-title {
+  margin-bottom: 23px;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+a.btn-subcribe {
+  text-decoration: none;
+  display: inline-block;
+  padding: 12px 15px;
+  background-color: var(--primaryColor);
+  cursor: pointer;
+  transition: background-color 0.4s;
+}
+.btn-subcribe:hover {
+  background-color: rgba(233, 90, 8, 0.466);
+}
+.input-field input {
+  padding: 12px 16px;
+  font-size: 1rem;
+  width: 392px;
+  border: none;
+  outline: none;
+}
+form.input-field {
+  font-family: "inter", sans-serif;
+}
+/* footer style */
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 60px 80px;
+}
+.home ul,
+.feature ul {
+  list-style: none;
+}
+.home li a,
+.feature li a {
+  color: var(--descriptionColor);
+  display: block;
+  text-decoration: none;
+  margin-bottom: 27px;
+  font-size: 20px;
+}
+.footer-logo {
+  max-width: 242px;
+}
+.footer-logo img {
+  width: 135px;
+  margin-bottom: 20px;
+}
+.footer-logo .description {
+  color: var(--descriptionColor);
+  font-size: 20px;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+}
+.nav-link {
+  display: flex;
+}
+
+.nav-link a {
+  margin-right: 24px;
+  cursor: pointer;
+}
+
+.nav-link a {
+  width: 35px;
 }
