--- a/style/responsive.css
+++ b/style/responsive.css
@@ -88,7 +88,7 @@
     margin: 80px auto;
   }
   .input-field input {
-    width: auto;
+    width: 250px;
   }
   /* footer section style */
   .footer-container {
